Favor plain Java 8 over Guava (#68)